--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
 name: ci
-
 on:
   push:
     branches:
       - main
-#  schedule:
-#    - cron: "0 0 * * *"
-
+  schedule:
+    - cron: "0 0 * * *"
 jobs:
   autogreen:
     runs-on: ubuntu-latest
@@ -17,11 +15,10 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
-
       - name: Auto green
         run: |
-          git config --local user.email "justjavac@gmail.com"
-          git config --local user.name "迷渡"
+          git config --local user.email "arknights7226@foxmail.com"
+          git config --local user.name "zedada1"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
           git commit --allow-empty -m "a commit a day keeps your girlfriend away"
