--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,19 @@
 name: ci
+
 on:
   push:
     branches:
-      - main
+      - master
   schedule:
     - cron: "0 0 * * *"
+
 jobs:
   autogreen:
     runs-on: ubuntu-latest
-    
-    permissions:
-      contents: write
-  
     steps:
       - name: Clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+
       - name: Auto green
         run: |
           git config --local user.email "arknights7226@foxmail.com"
